--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
             <span class="close" onclick="closeProjectModal()">&times;</span>
             <h2>Add New Project</h2>
             <form id="projectForm">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" required>
+                <div class="form-group">
+                    <label for="title">Project Name:</label>
+                    <input type="text" id="title" name="title" required>
+                </div>
                 
-                <label for="description">Description:</label>
-                <textarea id="description" name="description" rows="4" required></textarea>
+                <div class="form-group">
+                    <label for="description">Project Description:</label>
+                    <textarea id="description" name="description" rows="4" required></textarea>
+                </div>
                 
                 <button type="submit">Save</button>
             </form>
