--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>To do list</title>
 </head>
 <body>
     <div class="sidebar">
         <h2>Projects</h2>
         <button class="addProject">Add Project</button>
+        <ul id="projectList"></ul>
     </div>
 
     <div id="projectModal" class="modal">
