add task button added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <p id="projectDescription">Project description will appear here.</p>
                 <hr class="pd">
             </div>
+            <button class="addTask">Add Task</button>
+
+
         </div>
     </div>
 
