add task form shows up

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <hr class="pd">
             </div>
             <button class="addTask">Add Task</button>
-
-
+            <div id="taskFormContainer"></div>
+            <ul id="taskList"></ul>
         </div>
     </div>
 
