tasks can be edited and deleted

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <button class="addTask">Add Task</button>
             <div id="taskFormContainer"></div>
-            <ul id="taskList"></ul>
+            <ul id="taskList" class="task-list"></ul>
         </div>
     </div>
 
