made bin icons same size, changed edit icon in header, fixed hovering issue

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="projectInfo">
                 <div class="title-edit-container">
                     <h1 id="projectTitle">Select a project</h1>
-                    <div class="edit">Edit &#9998;</div>
+                    <div class="edit">Edit <i class="fas fa-pen"></i></div>
                 </div>
                 <p id="projectDescription">Project description will appear here.</p>
                 <hr class="pd">
